--- a/src/components/LoadMore/LoadMore.module.css
+++ b/src/components/LoadMore/LoadMore.module.css
@@ -1,19 +1,24 @@
 .container {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .button {
     color: black;
-    border: 1px solid black;
     border-radius: 10px;
-    padding: 4px;
-    width: 100px;
+    padding: 10px 20px;
+    width: 100%;
+    font-size: 16px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
 }
 
 .button:hover {
     cursor: pointer;
-    border: 2px solid black;
     color: white;
     background-color: black;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    outline: none;
 }
