--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -19,6 +19,7 @@
     padding: 10px 30px 10px 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
+    font-size: 16px;
 }
 
 .searchButton {
