--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,43 +1,41 @@
 .list {
-    list-style-type: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 16px;
     padding: 0;
     margin: 0;
+    list-style-type: none;
 }
 
 .item {
-    display: inline-block;
-    width: 25%;
-    box-sizing: border-box;
     padding: 10px;
     text-align: center;
-    gap: 8px;
 }
 
 li img {
-    width: 320px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border: 2px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    aspect-ratio: 16 / 9;
 }
 
 @media (max-width: 480px) {
-    .item{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: calc(100% - 40px);
-        margin: 0 20px;
-        gap: 8px;
+    .list {
+        grid-template-columns: 1fr;
     }
 }
 
-@media (max-width: 768px) {
-    .item {
-        display: inline-block;
-        width: 50%;
+@media (min-width: 481px) and (max-width: 768px) {
+    .list {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .list {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 }
