--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -24,9 +24,8 @@
 
 .searchButton {
     position: absolute;
-    top: 50%;
+    top: 10px;
     right: 10px;
-    transform: translateY(-30%);
     background: none;
     border: none;
     padding: 0;
